set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
include_directories(${CMAKE_SOURCE_DIR}/generator/src/generator/include)
add_subdirectory(break_table)
add_subdirectory(break_table_with_constants)
add_subdirectory(break_views)
add_subdirectory(up_proof)
add_subdirectory(consolidate_unary)
add_subdirectory(highs_model_test)
add_subdirectory(tiny_all_diff)
add_subdirectory(baby_tu_debug)